--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>HELLO</h1>
+    <h1>HELLO !</h1>
+    <h2>HELLO !</h2>
   </body>
 </html>
