--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>XIN CHAO</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>HELLO !</h1>
-    <h2>HELLO !</h2>
+    <h1>HELLO WORLD !</h1>
+    
+
   </body>
 </html>
