Nop bai tap ngay 2

--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Bài tập ngày 1</p>
     <ul>
         <li><a href = "http://127.0.0.1:5500/Ngay1/Bai1.html"> Bai tap 1</a></li>
         <li><a href = "http://127.0.0.1:5500/Ngay1/Bai2.html"> Bai tap 2</a></li>
         <li><a href = "http://127.0.0.1:5500/Ngay1/Bai3.html"> Bai tap 3</a></li>
+    </ul>
+    <p>Bài tập ngày 2</p>
+    <ul>
+        <li>
+            <a href = "https://hoaithu222.github.io/f8_offline_k8/Day_2/Bai1">Bài 1</a>
+        </li>
+        <li>
+            <a href = "https://hoaithu222.github.io/f8_offline_k8/Day_2/Bai2">Bài 2</a>
+        </li>
+        <li>
+            <a href = "https://hoaithu222.github.io/f8_offline_k8/Day_2/Bai3">Bài 3</a>
+        </li>
+        <li>
+            <a href = "https://hoaithu222.github.io/f8_offline_k8/Day_2/Bai4">Bài 4</a>
+        </li>
+        <li>
+            <a href = "https://hoaithu222.github.io/f8_offline_k8/Day_2/Bai5">Bài 5</a>
+        </li>
     </ul>
 </body>
 </html>
