Nộp bài tập ngày 3

--- a/Day_2/Bai3.html
+++ b/Day_2/Bai3.html
@@ -10,20 +10,21 @@
 <body>
     <h1>Get in touch with us by filling contact from below</h1>
     <form>
-        <table >
+        <table>
             <tr>
-                <td><input type = "text" placeholder="*Enter your full name" name = "ho_ten"/></td>
-                <td><input type = "email" placeholder="*Enter your email address" name ="email"/></td>
+                <td><input type="text" placeholder="*Enter your full name" name="ho_ten" /></td>
+                <td><input type="email" placeholder="*Enter your email address" name="email" /></td>
             </tr>
             <tr>
-                <td><input type = "text" placeholder="*Enter your subject" name = "subject"/></td>
+                <td><input type="text" placeholder="*Enter your subject" name="subject" /></td>
             </tr>
             <tr>
-                <td colspan = "2"><textarea placeholder="* Your messange here" name = "messange" rows="10" cols = "48"></textarea></td>
+                <td colspan="2"><textarea placeholder="* Your messange here" name="messange" rows="10"
+                        cols="48"></textarea></td>
             </tr>
             <tr>
-                <td colspan = "2"><button>Send message</button>*Please fill all require form field,thanks!</td>
-                
+                <td colspan="2"><button>Send message</button>*Please fill all require form field,thanks!</td>
+
             </tr>
 
 
