--- a/Day_2/Bai5.html
+++ b/Day_2/Bai5.html
@@ -29,6 +29,6 @@
             <img src = "https://cdn.icon-icons.com/icons2/99/PNG/96/linkedin_socialnetwork_17441.png" alt = "Linkedin" width = "24">
         </li>
     </ul>
-    <p>Copyright Hoc Web Chuan All Right Reserved.</p>
+    <p>Copyright Hoc Web Chuan All Right Reserved</p>
 </body>
 </html>
