--- a/ngay2/1.html
+++ b/ngay2/1.html
@@ -17,6 +17,18 @@
 
     </pre>
     <pre>
+        public class bai1{
+            public static void main(String[] arg){
+                Scanner  sc= new Scanner(System.in);
+                int n = sc.nextInt();
+                int a[] = new int[n];
+                for(int i = 0; i < n; i++){
+                    a[i] = sc.nextInt();
+                }
+            }
+        }
+    </pre>
+    <pre>
         <!-- Tránh lỗi bảo mật-->
         <h2>
         &copy;
