--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/Day-3/bai4">Bài tập 4</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/Day-3/bai5">Bài tập 5</a></li>
     </ul>
+    <p>Bài tập ngày 4</p>
+    <ul>
+        <li>
+            <a href="https://hoaithu222.github.io/f8_offline_k8/Day-4/bai1">Bài tập 1</a>
+        </li>
+        <li>
+            <a href="https://hoaithu222.github.io/f8_offline_k8/Day-4/bai2">Bài tập 2</a>
+        </li>
+        <li>
+            Bài 3 em xin nộp sau ạ
+        </li>
+    </ul>
 </body>
 
 </html>
