--- a/homework/Day-5/Bai1.html
+++ b/homework/Day-5/Bai1.html
@@ -8,7 +8,6 @@
     <style>
         .box {
             position: relative;
-            text-align: center;
         }
 
         a {
@@ -16,12 +15,12 @@
         }
 
         .sub_box {
-            border: 1px solid #D0D0D0;
+            border: 1px inset #D0D0D0;
             background-color: aliceblue;
             width: 400px;
             height: 250px;
             position: absolute;
-            left: 600px;
+            left: 530px;
             top: 150px;
             border-radius: 5px;
             text-align: center;
