--- a/homework/Day-5/Bai3.html
+++ b/homework/Day-5/Bai3.html
@@ -24,18 +24,30 @@
             width: 300px;
             height: 400px;
             position: absolute;
-            border: 3px inset rgba(235, 223, 223, 0.872);
+            border: 4px inset rgba(235, 223, 223, 0.872);
             border-radius: 4px;
-            left: 150px;
+            left: 130px;
             top: 100px;
             padding: 25px;
+        }
+
+        .sub_box1:hover {
+            transform: scale(1.2);
+        }
+
+        .sub_box2:hover {
+            transform: scale(1.2);
+        }
+
+        .sub_box3:hover {
+            transform: scale(1.2);
         }
 
         .sub_box2 {
             width: 300px;
             height: 400px;
             position: absolute;
-            border: 3px inset rgba(235, 223, 223, 0.872);
+            border: 4px inset rgba(235, 223, 223, 0.872);
             border-radius: 4px;
             left: 550px;
             top: 100px;
@@ -46,9 +58,9 @@
             width: 300px;
             height: 400px;
             position: absolute;
-            border: 3px inset rgba(235, 223, 223, 0.872);
+            border: 4px inset rgba(235, 223, 223, 0.872);
             border-radius: 4px;
-            left: 950px;
+            left: 970px;
             top: 100px;
             padding: 25px;
         }
