--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai2">Bài tập 2</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai3">Bài tập 3</a></li>
     </ul>
+    <p>Bài tập ngày 6</p>
+    <ul>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai1">Bài tập 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai2">Bài tập 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai3">Bài tập 3</a></li>
+    </ul>
 </body>
 
 </html>
