Nộp bài tập ngày 6

--- a/homework/Day-6/bai3.html
+++ b/homework/Day-6/bai3.html
@@ -15,11 +15,14 @@
             font-weight: 550;
         }
 
+
+
         .header .inner-wrap {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 15px 0;
+            width: 1600px;
         }
 
         .inner-logo {
