Nộp bài tập ngày 7

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai2">Bài tập 2</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai3">Bài tập 3</a></li>
     </ul>
+    <p>Bài tập về nhà ngày 7</p>
+    <ul>
+        <li><a href = "https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai1">Bài tập 1</a></li>
+        <li><a href = "https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai2">Bài tập 2</a></li>
+    </ul>
 </body>
 
 </html>
