Nộp bài tập ngày 7

--- a/homework/Day-7/bai2.html
+++ b/homework/Day-7/bai2.html
@@ -18,6 +18,7 @@
 
 <body>
     <div class="box">
+        <img src = "http://uiwebsoft.com/justlog/login-one/images/login-bg2.jpg" alt = "hình ảnh lỗi">
         <div class="sub_box">
             <div class="content">
                 <h1><span class="jl">JL</span> Just Log</h1>
