--- a/homework/Day-8/bai1.html
+++ b/homework/Day-8/bai1.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banner dự án</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/bai1.css">
-</head>
-<body>
-    <div class = "box">
-        <div class = "inner-box">
-            <div class= "content">
-                <h1>Ha Noi Melody Residences</h1>
-                <p>Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm khu đô thị mới Linh Đàm. Dự án có quy mô 3.28ha,dự kiến cung ứng ra thị trường 1.857 căn hộ cao cấp </p>
-                <p><i class="fa-solid fa-location-dot"></i> Quận Hoàng Mai,Hà Nội</p>
-
-            </div>
-            <div class = "sub-box">
-                3,2 TỶ/CĂN
-            </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/bai1.css" />
+  </head>
+  <body>
+    <div class="box">
+      <div class="inner-box">
+        <div class="content">
+          <h1>Ha Noi Melody Residences</h1>
+          <p>
+            Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm khu đô thị mới
+            Linh Đàm. Dự án có quy mô 3.28ha,dự kiến cung ứng ra thị trường
+            1.857 căn hộ cao cấp
+          </p>
+          <p><i class="fa-solid fa-location-dot"></i> Quận Hoàng Mai,Hà Nội</p>
+          <div class="sub-box">3,2 TỶ/CĂN</div>
         </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
