--- a/index.html
+++ b/index.html
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <p>Bài tập ngày 5</p>
     <ul>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai1">Bài tập 1</a></li>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai2">Bài tập 2</a></li>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai3">Bài tập 3</a></li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai1"
+          >Bài tập 1</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai2"
+          >Bài tập 2</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-5/Bai3"
+          >Bài tập 3</a
+        >
+      </li>
     </ul>
     <p>Bài tập ngày 6</p>
     <ul>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai1">Bài tập 1</a></li>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai2">Bài tập 2</a></li>
-        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai3">Bài tập 3</a></li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai1"
+          >Bài tập 1</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai2"
+          >Bài tập 2</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-6/bai3"
+          >Bài tập 3</a
+        >
+      </li>
     </ul>
     <p>Bài tập về nhà ngày 7</p>
     <ul>
-        <li><a href = "https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai1">Bài tập 1</a></li>
-        <li><a href = "https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai2">Bài tập 2</a></li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai1"
+          >Bài tập 1</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-7/bai2"
+          >Bài tập 2</a
+        >
+      </li>
     </ul>
-</body>
-
+    <p>Bài tập về nhà buổi 8</p>
+    <ul>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-8/bai1"
+          >Bài tâp 1</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-8/bai2"
+          >Bài tâp 1</a
+        >
+      </li>
+      <li>
+        <a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-8/bai3"
+          >Bài tâp 1</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
