--- a/homework/Day-8/bai1.html
+++ b/homework/Day-8/bai1.html
@@ -23,13 +23,17 @@
     <div class="box">
       <div class="inner-box">
         <div class="content">
-          <h1>Ha Noi Melody Residences</h1>
-          <p>
-            Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm khu đô thị mới
-            Linh Đàm. Dự án có quy mô 3.28ha,dự kiến cung ứng ra thị trường
-            1.857 căn hộ cao cấp
-          </p>
-          <p><i class="fa-solid fa-location-dot"></i> Quận Hoàng Mai,Hà Nội</p>
+          <div class="inner-content">
+            <h1>Ha Noi Melody Residences</h1>
+            <p>
+              Dự án Ha Noi Melody Residences tọa lạc ngay trung tâm khu đô thị
+              mới Linh Đàm. Dự án có quy mô 3.28ha,dự kiến cung ứng ra thị
+              trường 1.857 căn hộ cao cấp
+            </p>
+            <p>
+              <i class="fa-solid fa-location-dot"></i> Quận Hoàng Mai,Hà Nội
+            </p>
+          </div>
           <div class="sub-box">3,2 TỶ/CĂN</div>
         </div>
       </div>
