Nộp bài tập ngày 9

--- a/homework/Day-9/bai1.html
+++ b/homework/Day-9/bai1.html
@@ -1,111 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bài tập 1</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/bai1.css" />
-  </head>
-  <body>
-    <div class="box">
-      <div class="container">
-        <div class="inner-wrap">
-          <div class="inner-content">
-            <div class="inner-head">
-              <div class="inner-title"><h2>Together We Build</h2></div>
-              <div class="inner-icon">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bài tập 1</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/bai1.css" />
+</head>
+
+<body>
+  <div class="box">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-content">
+          <table>
+            <tr>
+              <td>
+                <h2>Together We Build</h2>
+                <p>
+                  In quasi vitae non alias nulla qui <br>,dolores dolor non tempora
+                  tenrtur
+                </p>
+                <a href="#">Family Law</a>
+              </td>
+              <td>
                 <i class="fa-solid fa-circle" style="color: #63e6be"></i>
-                <span>2012-2017</span>
-              </div>
-            </div>
-            <div class="inner-desc">
-              <p>
-                In quasi vitae non alias nulla qui ,dolores dolor non tempora
-                tenrtur
-              </p>
-            </div>
-            <div class="inner-button">
-              <a href="#">Family Law</a>
-            </div>
-          </div>
-          <div class="inner-content">
-            <div class="inner-head">
-              <div class="inner-title"><h2>Completed 1000 Cases</h2></div>
-              <div class="inner-icon">
+                <span class="inner-border"></span>
+              </td>
+              <td>
+                <div class="year">2012-2017</div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2>Completed 1000 Cases</h2>
+                <p>
+                  In quasi vitae non alias nulla qui <br>,dolores dolor non tempora
+                  tenrtur
+                </p>
+                <a href="#">Criminal Law</a>
+              </td>
+              <td>
                 <i class="fa-solid fa-circle" style="color: #63e6be"></i>
-                <span>2016-2012</span>
-              </div>
-            </div>
-            <div class="inner-desc">
-              <p>
-                In quasi vitae non alias nulla qui ,dolores dolor non tempora
-                tenrtur
-              </p>
-            </div>
-            <div class="inner-button">
-              <a href="#">Criminal Law</a>
-            </div>
-          </div>
-          <div class="inner-content">
-            <div class="inner-head">
-              <div class="inner-title"><h2>We Are Number One</h2></div>
-              <div class="inner-icon">
+                <span class="inner-border"></span>
+              </td>
+              <td>
+                <div class="year">2016-2012</div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2>We Are Number One</h2>
+                <p>
+                  In quasi vitae non alias nulla qui <br>,dolores dolor non tempora
+                  tenrtur
+                </p>
+                <a href="#">Business Law</a>
+              </td>
+              <td>
                 <i class="fa-solid fa-circle" style="color: #63e6be"></i>
-                <span>2018-2016</span>
-              </div>
-            </div>
-            <div class="inner-desc">
-              <p>
-                In quasi vitae non alias nulla qui ,dolores dolor non tempora
-                tenrtur
-              </p>
-            </div>
-            <div class="inner-button">
-              <a href="#">Business Law</a>
-            </div>
-          </div>
-          <div class="inner-content">
-            <div class="inner-head">
-              <div class="inner-title"><h2>Intellectual Property</h2></div>
-              <div class="inner-icon">
+                <span class="inner-border"></span>
+              </td>
+              <td>
+                <div class="year">2018-2016</div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2>Intellectual Property</h2>
+                <p>
+                  In quasi vitae non alias nulla qui <br>,dolores dolor non tempora
+                  tenrtur
+                </p>
+                <a href="#">Car Accident</a>
+              </td>
+              <td>
                 <i class="fa-solid fa-circle" style="color: #63e6be"></i>
-                <span>2022-2018</span>
-              </div>
-            </div>
-            <div class="inner-desc">
-              <p>
-                In quasi vitae non alias nulla qui ,dolores dolor non tempora
-                tenrtur
-              </p>
-            </div>
-            <div class="inner-button">
-              <a href="#">Car Accident</a>
-            </div>
-          </div>
+
+              </td>
+              <td>
+                <div class="year">2022-2018</div>
+              </td>
+            </tr>
+
+          </table>
         </div>
-        <div class="inner-image">
-          <img src="images/img.jpeg.jpg" alt="hình ảnh" />
-          <div class="inner-image-sub">
-            <img src="images/OIP.jpeg" alt="Hình ảnh" />
-            <div class="inner-blue">
-              <p><span>+76</span> Winning Awards</p>
-            </div>
+      </div>
+      <div class="inner-image">
+        <img src="images/img.jpeg.jpg" alt="hình ảnh" />
+        <div class="inner-image-sub">
+          <img src="images/OIP.jpeg" alt="Hình ảnh" />
+          <div class="inner-blue">
+            <p><span>+76</span> Winning Awards</p>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+
+</body>
+
 </html>
