--- a/onl/Bai11/index.html
+++ b/onl/Bai11/index.html
@@ -1,117 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Header -->
-    <header class="header">
-      <div class="inner-wrap">
-        <div class="inner-logo">
-          <a href="#">
-            <img src="image/logo.png" alt="logo" />
-            <span>SoftwareM4</span>
-          </a>
-        </div>
-        <div class="inner-menu">
-          <ol>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-          </ol>
-        </div>
-        <div class="inner-social">
-          <ol>
-            <li>
-              <a href="#" target="_blank"
-                ><i class="fa-brands fa-facebook-f"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#" target="_blank"
-                ><i class="fa-brands fa-twitter"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#" target="_blank"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-            </li>
-          </ol>
-        </div>
-        <div class="inner-mobi"><i class="fa-solid fa-bars"></i></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- Header -->
+  <header class="header">
+    <div class="inner-wrap">
+      <div class="inner-logo">
+        <a href="#">
+          <img src="image/logo.png" alt="logo" />
+          <span>SoftwareM4</span>
+        </a>
       </div>
-    </header>
-    <!-- End header -->
-    <!-- Section-one -->
-    <div class="section-one">
-      <div class="container">
-        <div class="inner-wrap">
-          <h2 class="inner-sub-title">Developer Company</h2>
-          <h1 class="inner-title">Software App</h1>
-          <p class="inner-disc">
+      <div class="inner-menu">
+        <ol>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ol>
+      </div>
+      <div class="inner-social">
+        <ol>
+          <li>
+            <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+        </ol>
+      </div>
+      <div class="inner-mobi"><i class="fa-solid fa-bars"></i></div>
+    </div>
+  </header>
+  <!-- End header -->
+  <!-- Section-one -->
+  <div class="section-one">
+    <div class="container">
+      <div class="inner-wrap">
+        <h2 class="inner-sub-title">Developer Company</h2>
+        <h1 class="inner-title">Software App</h1>
+        <p class="inner-disc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accumsan
+          porttitor egestas fermentum nulla.
+        </p>
+        <div class="inner-buttons">
+          <a href="#" class="button button-two">Our Service</a>
+          <a href="#" class="button button-two-outline">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Section-one -->
+  <!-- Section two -->
+  <div class="section-two">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-image">
+          <img src="image/features1.jpeg" alt="hình ảnh" />
+        </div>
+        <div class="inner-content">
+          <h3 class="inner-sub-title">Core Features</h3>
+          <h2 class="inner-title">Best Business Software Solution</h2>
+          <div class="inner-list">
+            <div class="inner-item">
+              <i class="fa-solid fa-palette"></i>
+              <span>Design</span>
+            </div>
+            <div class="inner-item">
+              <i class="fa-regular fa-hand-point-up"></i>
+              <span>Usage</span>
+            </div>
+            <div class="inner-item">
+              <i class="fa-solid fa-users"></i>
+              <span>Testing</span>
+            </div>
+          </div>
+          <p class="inner-desc">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accumsan
             porttitor egestas fermentum nulla.
           </p>
-          <div class="inner-buttons">
-            <a href="#" class="button button-two">Our Service</a>
-            <a href="#" class="button button-two-outline">Learn More</a>
-          </div>
+          <a href="#" class="button button-two">Read More</a>
         </div>
       </div>
     </div>
-    <!-- End Section-one -->
-    <!-- Section two -->
-    <div class="section-two">
-      <div class="container">
-        <div class="inner-wrap">
-          <div class="inner-image">
-            <img src="image/features1.jpeg" alt="hình ảnh" />
-          </div>
+  </div>
+  <!--End section two -->
+  <!-- Section three -->
+  <div class="section-three">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-box">
           <div class="inner-content">
-            <h3 class="inner-sub-title">Core Features</h3>
-            <h2 class="inner-title">Best Business Software Solution</h2>
-            <div class="inner-list">
-              <div class="inner-item">
-                <i class="fa-solid fa-palette"></i>
-                <span>Design</span>
-              </div>
-              <div class="inner-item">
-                <i class="fa-regular fa-hand-point-up"></i>
-                <span>Usage</span>
-              </div>
-              <div class="inner-item">
-                <i class="fa-solid fa-users"></i>
-                <span>Testing</span>
-              </div>
-            </div>
-            <p class="inner-desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accumsan
-              porttitor egestas fermentum nulla.
-            </p>
-            <a href="#" class="button button-two">Read More</a>
+            <p>App Download</p>
+            <h3>You can control direct from your mobile.</h3>
+          </div>
+          <div class="inner-image">
+            <img src="image/img.jpeg" alt="hình ảnh">
           </div>
         </div>
       </div>
     </div>
-    <!--End section two -->
-  </body>
+  </div>
+  <!-- End section three -->
+  <!-- Section four -->
+  <div class="section-four">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-content">
+          <h3>Our Goal</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id libero vitae felis ullamcorper
+            pharetra a non tortor. Etiam cursus ex id porta viverra. In hac habitasse platea dictumst. Etiam auctor,
+            erat ut interdum semper, elit dui hendrerit turpis, quis eleifend arcu nulla vitae diam. Sed efficitur
+            porttitor justo, eget mollis sem interdum sed. Quisque ornare et risus id bibendum. Donec faucibus
+            sollicitudin rhoncus. Sed in porttitor sem. Quisque vitae mollis odio. Aenean consectetur placerat nibh,
+            quis elementum orci fermentum vitae.</p>
+
+        </div>
+        <div class="inner-list">
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>App Design & Research</span>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>Development & Testing</span>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>App Design & Research</span>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>Development & Testing</span>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>App Design & Research</span>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-check"></i>
+            <span>Development & Testing</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End section four -->
+  <!-- Section five -->
+  <div class="section-five">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-title">
+          <h2>Core Features</h2>
+        </div>
+        <div class="inner-list">
+          <div class="inner-box">
+            <div class="inner-image"><a><img src="image/features1.jpeg" alt="hình ảnh"></a></div>
+            <div class="inner-content">
+              <p>Software, Interface</p>
+              <h3>Development</h3>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="inner-box">
+            <div class="inner-image"><a><img src="image/img.jpeg" alt="hình ảnh"></a></div>
+            <div class="inner-content">
+              <p>Software, Design</p>
+              <h3>Design</h3>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="inner-box">
+            <div class="inner-image"><a><img src="image/features3.jpeg" alt="hình ảnh"></a></div>
+            <div class="inner-content">
+              <p>Software, Interface</p>
+              <h3>Optimization</h3>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Section five -->
+  <!-- Section six -->
+  <div class="section-six">
+    <div class="container">
+      <div class="inner-wrap">
+        <div class="inner-content">
+          <p>Careers</p>
+          <h3>Join our team to create best digital solutions.</h3>
+        </div>
+        <div class="inner-list">
+          <div class="item">
+            <i class="fa-solid fa-gear"></i>
+            <span>Development</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-palette"></i>
+            <span>Development</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+          <div class="item">
+            <i class="fa-solid fa-box"></i>
+            <span>Development</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+  <!-- End section six -->
+
+
+
+</body>
+
 </html>
