Nộp bài tập ngày 11

--- a/homework/Day-11/index.html
+++ b/homework/Day-11/index.html
@@ -70,7 +70,7 @@
     </div>
     <!-- End Section-one -->
     <!-- Section-two -->
-    <div class="section-two">
+    <!-- <div class="section-two">
         <div class="container">
             <div class="inner-wrap">
                 <div class="inner-head">
@@ -95,6 +95,43 @@
                         <h3>Secure checkout</h3>
                         <p>If you get rotten items - return immediately to us.</p>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="section-two">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-head">
+                    <p>What we Serve</p>
+                    <h2>Fruit And Vegetable Delivered To Your Home</h2>
+                </div>
+                <div class="inner-content">
+                    <div class="inner-list">
+                        <div class="inner-box">
+                            <img src="assets/images/service-ic1.svg" alt="hình ảnh">
+                            <h3>Free shipping</h3>
+                            <p>Enjoy Order in a hand using the fresness of groceries</p>
+                        </div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="inner-list">
+                        <div class="inner-box">
+                            <img src="assets/images/service-ic2.svg" alt="hình ảnh">
+                            <h3>15 days returns</h3>
+                            <p>Order in a handy way using the freshness of the groceries.</p>
+
+                        </div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="inner-list">
+                        <div class="inner-box">
+                            <img src="assets/images/service-ic3.svg" alt="hình ảnh">
+                            <h3>Secure checkout</h3>
+                            <p>If you get rotten items - return immediately to us.</p>
+                        </div>
+                        <div class="overlay"></div>
                     </div>
                 </div>
             </div>
