--- a/homework/Day-12/index.html
+++ b/homework/Day-12/index.html
@@ -190,6 +190,65 @@
         </div>
     </section>
     <!-- end section five -->
+    <!-- section six -->
+    <section class="section-six">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <img src="image/logo.svg" alt="logo">
+                    <p class="inner-desc">
+                        Fast delivery, which is active all over the world, serves with many transportation vehicles.
+                    </p>
+                </div>
+                <div class="inner-list">
+                    <div class="inner-item">
+                        <h3 class="inner-title">
+                            Company
+                        </h3>
+                        <ol>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">All Products</a></li>
+                            <li><a href="#">Locations Map</a></li>
+                        </ol>
+                    </div>
+                    <div class="inner-item">
+                        <h3 class="inner-title">
+                            Services
+                        </h3>
+                        <ol>
+                            <li><a href="#">Order tracking</a></li>
+                            <li><a href="#">Wish List</a></li>
+                            <li><a href="#">My account</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                        </ol>
+                    </div>
+                    <div class="inner-item">
+                        <h3 class="inner-title">Get in Touch</h3>
+                        <p class="inner-desc">Subscribe to our weekly Newsletter and receive updates via email.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- end section six -->
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="inner-wrap">
+                <p>All Rights Reserved @ BESNIK 2021</p>
+                <div class="inner-content">
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">Privacy & Policy</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer -->
+
+
 
 
 </body>
