Nộp bài tập ngày 13

--- a/onl/bai3/index.html
+++ b/onl/bai3/index.html
@@ -238,7 +238,7 @@
                         Join our team to create best digital solutions.
                     </h3>
                 </div>
-                <div class="innenr-box">
+                <div class="inner-box">
                     <div class="inner-item">
                         <div class="inner-info">
                             <i class="fa-solid fa-gear"></i>
@@ -265,6 +265,91 @@
         </div>
     </section>
     <!-- end section six -->
+    <!-- section seven  -->
+    <section class="section-seven">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-head">
+                    <p class="inner-desc">Experts</p>
+                    <h3 class="inner-title">Our Team Members</h3>
+                </div>
+                <div class="inner-list">
+                    <div class="inner-item">
+                        <img src="assets/image/team1.jpg" alt="hình ảnh">
+                        <h4>John Smith</h4>
+                        <p>Programmer</p>
+                        <div class="inner-social">
+                            <ol>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="inner-item">
+                        <img src="assets/image/team2.jpg" alt="hình ảnh">
+                        <h4>Sarah Palmer</h4>
+                        <p>Manager</p>
+                        <div class="inner-social">
+                            <ol>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="inner-item">
+                        <img src="assets/image/team3.jpg" alt="hình ảnh">
+                        <h4>Adam Swift</h4>
+                        <p>Analyst</p>
+                        <div class="inner-social">
+                            <ol>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="inner-item">
+                        <img src="assets/image/team4.jpg" alt="hình ảnh">
+                        <h4>Helen Smith</h4>
+                        <p>Designer</p>
+                        <div class="inner-social">
+                            <ol>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <div class="inner-content">
+                    <div class="inner-info">
+                        <div class="box">
+                            <span>Cleints</span>
+                            <h4>Art Museum</h4>
+                        </div>
+                        <div class="box">
+                            <span>Services</span>
+                            <h4>Website</h4>
+                        </div>
+                        <div class="box">
+                            <span>Durations</span>
+                            <h4>10 - 30 Days</h4>
+                        </div>
+                        <div class="box">
+                            <span>Tools</span>
+                            <h4>Figma</h4>
+                        </div>
+                        <div class="box">
+                            <a href="#">Preview</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end section seven -->
 
 
 
