--- a/Bai2/index.html
+++ b/Bai2/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io (1)/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io (1)/favicon-32x32.png">
@@ -24,6 +27,7 @@
                 <div class="inner-logo">
                     <a href="#"><img src="image/Logo.svg" alt="logo" /></a>
                 </div>
+                <input type="checkbox" name="menu" id="checked" hidden />
                 <nav class="inner-menu">
                     <ol>
                         <li><a href="#">Home</a></li>
@@ -33,6 +37,7 @@
                         <li><a href="#">Contact</a></li>
                     </ol>
                 </nav>
+                <label for="checked" class="menu-toggle"><i class="fa-solid fa-bars-staggered"></i></label>
                 <div class="inner-start">
                     <a href="#" class="signIn">Sign in</a>
                     <a href="#" class="button">Get started</a>
@@ -428,8 +433,244 @@
         </div>
     </section>
     <!-- end section six -->
+    <!-- section seven  -->
+    <section class="section-seven">
+        <div class="container">
+            <div class="inner-head">
+                <h3 class="inner-title">
+                    From our Blog
+                </h3>
+                <p class="inner-desc">
+                    93% of traffic begins with a search query. Even with a high number of searches being performed.
+                </p>
+
+            </div>
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <div class="inner-image">
+                        <img src="image/Rectangle1.png" alt="hình ảnh" />
+                    </div>
+                    <div class="inner-content">
+                        <h3 class="inner-title">
+                            How to Merge Instagram Accounts
+                        </h3>
+                        <p class="inner-desc">
+                            So, you need to merge Instagram accounts but you’re not sure what to do? No worries. I’ll
+                            walk you through.
+                        </p>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <div class="inner-image">
+                        <img src="image/Rectangle2.png" alt="hình ảnh" />
+                    </div>
+                    <div class="inner-content">
+                        <h3 class="inner-title">
+                            Advanced SEO Tactics for Become an SEO Expert
+                        </h3>
+                        <p class="inner-desc">
+                            Even with a high number of searches being performed, the large majority of users don’t ever
+                            scroll past the.
+                        </p>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <div class="inner-image">
+                        <img src="image/Rectangle3.png" alt="hình ảnh" />
+                    </div>
+                    <div class="inner-content">
+                        <h3 class="inner-title">
+                            How to Optimize Your Digital Marketing Strategy
+                        </h3>
+                        <p class="inner-desc">
+                            When it comes to your digital marketing strategy, it’s not enough to have an eye-catching.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="inner-button">
+                <a href="#" class="button">
+                    Learn more
+                </a>
+            </div>
+
+        </div>
+    </section>
+    <!-- end section seven  -->
+    <!--section eight -->
+    <section class="section-eight">
+        <div class="container">
+            <div class="inner-head">
+                <h3 class="inner-title">
+                    Happy clients about us
+                </h3>
+            </div>
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <div class="head">
+                        <div class="item">
+                            <div class="image">
+                                <img src="image/imgOne.svg" alt="hình ảnh" />
+                            </div>
+                            <div class="content">
+                                <h4 class="inner-name">Dany Monson</h4>
+                                <p class="inner-job">
+                                    CEO & Founder
+                                </p>
+                            </div>
+                        </div>
+                        <div class="inner-icon">
+                            <img src="image/twitter1.svg" alt="hình ảnh" />
+                        </div>
+                    </div>
+                    <p class="inner-desc">
+                        “It is very easy to communicate with Besnik and I love the way they adapt to my pace of work. We
+                        start with discovery call to understand.”
+                    </p>
+                </div>
+                <div class="inner-box">
+                    <div class="head">
+                        <div class="item">
+                            <div class="image">
+                                <img src="image/imgTwo.svg" alt="hình ảnh" />
+                            </div>
+                            <div class="content">
+                                <h4 class="inner-name">Abby Hollis</h4>
+                                <p class="inner-job">
+                                    Lead at Uniting vic.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="inner-icon">
+                            <img src="image/twitter1.svg" alt="hình ảnh" />
+                        </div>
+                    </div>
+                    <p class="inner-desc">
+                        “I've played around with several tools in the generative marketing copy space, and Besnik is by
+                        far the best I've seen.”
+                    </p>
+                </div>
+                <div class="inner-box">
+                    <div class="head">
+                        <div class="item">
+                            <div class="image">
+                                <img src="image/imgThree.svg" alt="hình ảnh" />
+                            </div>
+                            <div class="content">
+                                <h4 class="inner-name">Omar Farook</h4>
+                                <p class="inner-job">
+                                    VP of Product Design
+                                </p>
+                            </div>
+                        </div>
+                        <div class="inner-icon">
+                            <img src="image/twitter1.svg" alt="hình ảnh" />
+                        </div>
+                    </div>
+                    <p class="inner-desc">
+                        “Besnik helps produce templates for writing headlines, transactional email copy, Facebook ads
+                        and so much more.”
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end section eight -->
+    <!--  section form-->
+    <section class="section-form">
+        <div class="container">
+            <div class="inner-wrap">
+                <h3 class="inner-title">
+                    Sign up for new Besnik content, updates, surveys & offers.
+                </h3>
+                <form class="form">
+                    <div class="box">
+                        <img src="image/email1.svg" alt="hình ảnh" />
+                        <input type="email" name="email" placeholder="Enter your email here" />
+                    </div>
+                    <a href="#" class="button">Subscribe</a>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- end section form -->
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="box-one">
+                    <img src="image/Logo.svg" alt="logo" />
+                    <p class="inner-desc">
+                        We start with a discovery call to understand your company. The problems you are facing.
+                    </p>
+                    <h4 class="inner-title">
+                        Follow us
+                    </h4>
+                    <ol class="menu">
+                        <li><a href="#"><img src="image/002-facebook.svg" /></a></li>
+                        <li><a href="#"><img src="image/003-instagram.svg" /></a></li>
+                        <li><a href="#"><img src="image/004-twitter.svg" /></a></li>
+                        <li><a href="#"><img src="image/001-linkedin.svg" /></a></li>
+                    </ol>
+                </div>
+                <div class="box-two">
+                    <div class="inner-box">
+                        <h3 class="inner-title">
+                            Solutions
+                        </h3>
+                        <ol>
+                            <li><a href="#">SEO Services</a></li>
+                            <li><a href="#">Social Media</a></li>
+                            <li><a href="#">Pay-per-click</a></li>
+                            <li><a href="#">Web Analytics</a></li>
+                            <li><a href="#">Web Development</a></li>
+
+                        </ol>
+                    </div>
+                    <div class="inner-box">
+                        <h3 class="inner-title">
+                            Industries
+                        </h3>
+                        <ol>
+                            <li><a href="#">Virtual Marketing</a></li>
+                            <li><a href="#">Email Marketing</a></li>
+                            <li><a href="#">Keyword Analytics</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Blog Management</a></li>
+
+                        </ol>
+                    </div>
+                    <div class="inner-box">
+                        <h3 class="inner-title">
+                            Company
+                        </h3>
+                        <ol>
+                            <li><a href="#">Consumer</a></li>
+                            <li><a href="#">Leadership</a></li>
+                            <li><a href="#">Content Management</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ol>
+                    </div>
+
+                </div>
+
+            </div>
 
 
+        </div>
+        <div class="inner-footer">
+            <div class="left">
+                All rights reserved by © Besnik creative 2021
+            </div>
+            <div class="right">
+                <p>Privacy & Policy</p>
+                <p>Terms & Conditions</p>
+            </div>
+
+        </div>
+
+    </footer>
+    <!--end footer  -->
 
 </body>
 
