Nộp bài tập ngày 18

--- a/homework/Day-20/Bai4.html
+++ b/homework/Day-20/Bai4.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài 6</title>
-    <link rel="stylesheet" href="CSS/bai6.css">
+    <title>Document</title>
 </head>
 
 <body>
-    <script src="js/bai6.js"></script>
+    <script src="js/bai4.js"></script>
 </body>
 
 </html>
