--- a/homework/exerciseFunction/bai1.html
+++ b/homework/exerciseFunction/bai1.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài 6</title>
-    <link rel="stylesheet" href="CSS/bai6.css">
+    <title>Bài 1: N số fibonaci</title>
 </head>
 
 <body>
-    <script src="js/bai6.js"></script>
+    <script src="js/bai1.js"></script>
+
 </body>
 
 </html>
