--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-17/ex06.html">Bài 5</a></li>
 
     </ol>
+    <h1>Bài tập ngày 18</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai1.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai2.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai3.html">Bài 3</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai4.html">Bài 4</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai5.html">Bài 5</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai6.html">Bài 6</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai7.html">Bài 7</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai8.html">Bài 8</a></li>
+
+    </ol>
 </body>
 
 </html>
