--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-18/bai8.html">Bài 8</a></li>
 
     </ol>
+    <h1>Bài tập ngày 19</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/bai1.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/ex01.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/bai2.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/ex02.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/bai3.html">Bài 3</a></li>
+
+    </ol>
 </body>
 
 </html>
