Nộp bài tập ngày 21

--- a/bai3/index.html
+++ b/bai3/index.html
@@ -109,55 +109,126 @@
                 </p>
             </div>
             <div class="inner-list">
-                <div class="inner-box">
+                <div class="inner-box box-one">
                     <div class="inner-image image-one">
                         <img src="asets/icons/box-search 1.svg" alt="icon" />
                     </div>
-                    <div class="title">
+                    <h3 class="title">
                         Financial Planning System
-                    </div>
-                    <div class="desc">
+                    </h3>
+                    <p class="desc">
                         Protocols apart from aengage models, pricing billing
-                    </div>
+                    </p>
                 </div>
-                <div class="inner-box">
+                <div class="inner-box box-two">
                     <div class="inner-image image-two">
                         <img src="asets/icons/empty-wallet 1.svg" alt="icon" />
                     </div>
-                    <div class="title">
+                    <h3 class="title">
                         Development Website and App
-                    </div>
-                    <div class="desc">
+                    </h3>
+                    <p class="desc">
                         Communication protocols apart from engagement models
-                    </div>
+                    </p>
                 </div>
-                <div class="inner-box">
+                <div class="inner-box box-three">
                     <div class="inner-image image-three">
                         <img src="asets/icons/code-1 1.svg" alt="icon" />
                     </div>
-                    <div class="title">
+                    <h3 class="title">
                         Market Analysis Project
-                    </div>
-                    <div class="desc">
+                    </h3>
+                    <p class="desc">
                         Protocols apart from aengage models, pricing billing
-                    </div>
+                    </p>
                 </div>
-                <div class="inner-box">
+                <div class="inner-box box-four">
                     <div class="inner-image image-four">
                         <img src="asets/icons/chart-square 1.svg" alt="icon" />
                     </div>
-                    <div class="title">
+                    <h3 class="title">
                         Business Idea Planning
-                    </div>
-                    <div class="desc">
+                    </h3>
+                    <p class="desc">
                         We present you a proposal and discuss niffty-gritty like
-                    </div>
+                    </p>
                 </div>
             </div>
 
         </div>
     </section>
     <!-- end section three -->
+    <!-- section four -->
+    <section class="section-four">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-image">
+                    <img src="asets/imgaes/image_two.png" alt="hình ảnh" />
+                    <img src="asets/icons/round.svg" alt="" class="image-one" />
+                    <img src="asets/icons/play.svg" alt="" class="image-two" />
+                </div>
+                <div class="inner-content">
+                    <div class="inner-image">
+                        <img src="asets/imgaes/Rectangle 26.png" alt="hình ảnh" />
+                    </div>
+                    <h3 class="inner-title">
+                        Great Digital Product Agency since 2016
+                    </h3>
+                    <p class="inner-desc">
+                        Our Business Plan is a written document describing a company's core business activites,
+                        Objectives, and how it plans to achieve its goals. Our goal is to provide our client high
+                        quality Product with modern idea accordingly their budgets and according thir reuirements.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end section four -->
+    <!-- section five -->
+    <section class="section-five">
+        <div class="container">
+            <div class="inner-head">
+                <h3 class="inner-title">What our happy client say</h3>
+                <p class="inner-desc">
+                    Several selected clients, who already believe in our service.
+                </p>
+            </div>
+            <div class="inner-wrap">
+                <div class="inner-image inner-box">
+                    <img src="asets/imgaes/image_three.png" alt="hình ảnh" />
+                </div>
+                <div class="inner-content inner-box">
+                    <h3 class="inner-title">
+                        Matthew Paul
+                    </h3>
+                    <p class="inner-desc">
+                        Perfect, very good job! Thank you for the amazing design and work. Really impressed with the
+                        high quality and quick turnaround time. Highly recommend.
+                    </p>
+                    <div class="inner-list">
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                    </div>
+                </div>
+                <div class="inner-box box">
+                    <img src="asets/imgaes/unsplash_O3ymvT7Wf9U.svg" alt="" />
+                    <img src="asets/imgaes/img1.svg" alt="" class="imgOne" />
+                    <img src="asets/imgaes/img2.svg" alt="" class="imgTwo" />
+                    <img src="asets/imgaes/img3.svg" alt="" class="imgThree" />
+                    <img src="asets/imgaes/img4.svg" alt="" class="imgFour" />
+                    <img src="asets/imgaes/img5.svg" alt="" class="imgFive" />
+                    <img src="asets/imgaes/img6.svg" alt="" class="imgSix" />
+                    <img src="asets/imgaes/img7.svg" alt="" class="imgSeven" />
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- end section five -->
 
 
 
