--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/exerciseFunction/bai3.html">Bài 3</a></li>
 
     </ol>
+    <h1>Bài tập ngày 21</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai1.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai2.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai3.html">Bài 3</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai4.html">Bài 4</a></li>
+    </ol>
 </body>
 
 </html>
