--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai3.html">Bài 3</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-21/Bai4.html">Bài 4</a></li>
     </ol>
+    <h1>Bài tập ngày 22</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai1.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai2.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai3.html">Bài 3</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai4.html">Bài 4</a></li>
+    </ol>
+
 </body>
 
 </html>
