Nộp bài tập ngày 23

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai3.html">Bài 3</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-22/bai4.html">Bài 4</a></li>
     </ol>
-
+    <h1>Bài tập ngày 23</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-23/ex01.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-23/ex02.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-23/ex03.html">Bài 3</a></li>
+    </ol>
 </body>
 
 </html>
