--- a/ngay_/Bai1/index.html
+++ b/ngay_/Bai1/index.html
@@ -69,7 +69,7 @@
                         <div class="sub-box">
                             <input type="text" name="zip code" placeholder="Enter Zip Coad" />
                         </div>
-                        <div class="button button-one box-one">
+                        <div class="box-one">
                             <div class="content">Discover</div>
                             <div class="icon">
                                 <i class="fa-solid fa-chevron-right"></i>
