Nộp bài tập ngày 24

--- a/ngay_/Day-1/index.html
+++ b/ngay_/Day-1/index.html
@@ -214,7 +214,9 @@
             </div>
             <div class="inner-list">
                 <div class="inner-item">
-                    <img src="asets/images/Image-one.png" alt="" />
+                    <div class="inner-image image">
+                        <img src="asets/images/Image-one.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         New York-Style pizza
@@ -232,7 +234,9 @@
 
                 </div>
                 <div class="inner-item">
-                    <img src="asets/images/food1.png" alt="" />
+                    <div class="inner-image ">
+                        <img src="asets/images/food1.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         Bento Ekiben Makunchi ..
@@ -250,7 +254,9 @@
 
                 </div>
                 <div class="inner-item">
-                    <img src="asets/images/food2.png" alt="" />
+                    <div class="inner-image image">
+                        <img src="asets/images/food2.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         Humburger Veggei ..
@@ -268,7 +274,9 @@
 
                 </div>
                 <div class="inner-item">
-                    <img src="asets/images/food3.png" alt="" />
+                    <div class="inner-image image">
+                        <img src="asets/images/food3.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         Indian Cusine Briyani Buffet
@@ -286,7 +294,9 @@
 
                 </div>
                 <div class="inner-item">
-                    <img src="asets/images/food4.png" alt="" />
+                    <div class="inner-image image">
+                        <img src="asets/images/food4.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         Chiken Tikka Buffalo Wing ..
@@ -304,7 +314,9 @@
 
                 </div>
                 <div class="inner-item">
-                    <img src="asets/images/food5.png" alt="" />
+                    <div class="inner-image image">
+                        <img src="asets/images/food5.png" alt="" />
+                    </div>
                     <img src="asets/icons/Review.svg" alt="" />
                     <h3 class="inner-title">
                         Fsish Fry Shashik Freid Fish ..
