--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-23/ex02.html">Bài 2</a></li>
         <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-23/ex03.html">Bài 3</a></li>
     </ol>
+    <h1>Bài tập ngày 23</h1>
+    <ol>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-24/ex01.html">Bài 1</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-24/ex02.html">Bài 2</a></li>
+        <li><a href="https://hoaithu222.github.io/f8_offline_k8/homework/Day-24/ex03.html">Bài 3</a></li>
+    </ol>
 </body>
 
 </html>
