Nộp bài tập ngày 27

--- a/homework/Day-27/ex01.html
+++ b/homework/Day-27/ex01.html
@@ -47,6 +47,7 @@
                     <div class="input-pass">
                         <input type="password" name="password" placeholder="Mật khẩu" />
                         <i class="fa-solid fa-eye"></i>
+                        <i class="fa-solid fa-eye-slash"></i>
                     </div>
                     <div class="error-message"></div>
                 </div>
@@ -85,10 +86,11 @@
                     <div class="input-pass">
                         <input type="password" name="password" placeholder="Mật khẩu" />
                         <i class="fa-solid fa-eye"></i>
+                        <i class="fa-solid fa-eye-slash"></i>
                     </div>
                     <div class="error-message"></div>
                 </div>
-                <button class="sign">Đăng Nhập</button>
+                <button class="sign">Đăng Ký</button>
             </form>
         </div>
         <div class="over-display"></div>
