--- a/onl/Bai1/ex10.html
+++ b/onl/Bai1/ex10.html
@@ -20,7 +20,7 @@
         }
 
         .menu {
-            width: 300px;
+            width: 100%;
             background-color: #000;
             margin: 30px auto;
         }
@@ -29,7 +29,7 @@
             color: #fff;
             text-decoration: none;
             display: block;
-            padding: 5px;
+            padding: 20px;
         }
 
         .menu ul {
