--- a/project_/pages/home.html
+++ b/project_/pages/home.html
@@ -32,7 +32,7 @@
     <!-- section one -->
     <section class="section-one">
         <div class="bg-image">
-            <img src="/asets/images/hero-bg.9aef0b0b2fedd095.jpg">
+            <img src="../asets/images/hero-bg.9aef0b0b2fedd095.jpg">
         </div>
         <div class="container">
             <div class="inner-wrap">
